# scrapy-headless

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/workflows/: createrelease.yml  testpackage.yml
scrapy_headless/: __init__.py  http.py  middlewares.py  uBlock0@raymondhill.net.xpi
tests/: conftest.py  test_cases.py  test_http.py  test_middlewares.py
