[bumpversion]
current_version = 0.0.7
commit = False
tag = False

[metadata]
name = scrapy-headless
url = https://github.com/OryJonay/scrapy-headless
licence = MIT License
description = Scrapy with Headless Selenium
long_description = file:README.md

[options]
include_package_data = true
install_requires = Scrapy; selenium

[options.extras_require]
tests = pytest; pytest-cov; coveralls

[options.package_data]
* = *.xpi

[pep8]
max-line-length = 127

[bumpversion:file:setup.cfg]
