[bumpversion]
current_version = 0.1.1
commit = True
tag = True
message = Finished Release {new_version}
tag_message = Tagging Release {new_version}

[metadata]
name = scrapy-headless-selenium
url = https://github.com/OryJonay/scrapy-headless
licence = MIT License
description = Scrapy with Headless Selenium
long_description = file:README.md

[options]
include_package_data = true
install_requires = Scrapy; selenium

[options.extras_require]
tests = pytest; pytest-cov; coveralls; flaky

[options.package_data]
* = *.xpi

[pep8]
max-line-length = 127

[bumpversion:file:setup.cfg]
